# FundusDRGrading

./: .gitignore  .pre-commit-config.yaml  README.md  launch.sh  models_macs_params.csv  pyproject.toml
configs/: config.yaml
entrypoints/: 3090.sh  a6000.sh  generic.sh  liv4dgpu.sh
notebooks/: test_data.ipynb
results/Grading-DiabeticRetinopathy-Comparisons-V3/snowy-fog-267/: EYEPACS_test.csv  IDRID_test.csv
src/fundusClassif/: my_lightning_module.py
src/fundusClassif/callbacks/: callback_factory.py  ema.py  mixup.py  result_saver.py
src/fundusClassif/data/: data_factory.py  fundus.py  imageNet.py
src/fundusClassif/metrics/: binary.py  metrics_factory.py
src/fundusClassif/models/: lat.py  model_factory.py
src/fundusClassif/scripts/: delete_checkpoints.py  generate_sh_script.py  precache.py  profile_models.py  summarize_data.py  test.py  train.py
src/fundusClassif/utils/: images.py  logger.py  lr_decay.py
