[project]
name = "FundusDiabeticRetinopathyClassification"
version = "0.1.0"
description = "Diabetic Retinopathy Grading"
dependencies = [
    "albumentations",
    "torch",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "scikit-learn",
    "pytorch-lightning",
    "nntools @ git+https://github.com/ClementPla/NNTools@attrs_dataset",
    "timm",
    "wandb",
    "torchmetrics",
]
readme = "README.md"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fundusClassif"]

[tool.rye]
managed = true

[project.scripts]
train = "fundusClassif.scripts.train:train"

[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit"]
notebook = ["ipykernel", "matplotlib"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["fundusClassif"]
